--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=lifehon_front
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.mustache
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
