Rewrtigin some stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
+server.port=8093
